<resources>
    <string name="app_name">WUAP</string>
    <string name="settings">Settings</string>
    <string name="login">Login</string>
    <string name="hangman">Hangman</string>
    <string name="pairs">Pairs</string>
    <string name="tictactoe">TicTacToe</string>
    <string name="sound_button">Sound</string>
    <string name="flips">Flips:</string>
    <string name="about">About</string>
    <string name="about_full">In its final state, this application will be used as a crossroad to build-in games such as Hangman, Pairs or TicTacToe.</string>
    <string name="author">Author: Václav Truhlařík</string>
</resources>